<resources>
    <string name="app_name">ChatApp</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="acess">Acessar</string>
    <string name="friends">Amigos</string>
    <string name="chat">Chat</string>
    <string name="groups">Grupos</string>
    <string name="nav_header_title">ChatApp</string>
    <string name="nav_header_subtitle">chatappsupport@chatapp.com</string>
    <string name="new_group">Novo Grupo</string>
    <string name="new_transmission">Nova Transmissão</string>
    <string name="chatapp_web">ChatApp Web</string>
    <string name="config">Configurações</string>
    <string name="communicate">Comunicação</string>
    <string name="contact">Contato</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
