<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_group"
            android:title="@string/new_group" />
        <item
            android:id="@+id/nav_new_transmission"
            android:title="@string/new_transmission" />
        <item
            android:id="@+id/nav_chatapp_web"
            android:title="@string/chatapp_web" />
        <item
            android:id="@+id/nav_config"
            android:title="@string/config" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:title="@string/contact" />
        </menu>
    </item>

</menu>
